--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,4 +29,5 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.8.0'
     implementation 'com.android.support:design:28.0.0'
     implementation 'com.mikhaellopez:circularimageview:3.2.0'
+    implementation 'com.android.volley:volley:1.1.1'
 }
